# tradingagentsv2

./: .env.example  .gitignore  5MIN_VS_1MIN_COMPARISON.md  ACTUAL_TRADING_REPORT.md  BEARISH_CHOCH_HOUR14_VALIDATION.md  BEARISH_CHOCH_HOUR19_ANALYSIS.md  BOS_CHOCH_BACKTEST_RESULTS.md  CANDLESTICK_PATTERN_ANALYSIS.md  COMBINED_STRATEGY_TEST.md  COMPLETE_EXPLORATION_SUMMARY.md  COMPREHENSIVE_BACKTEST_1MIN_2010_2026.md  COMPREHENSIVE_BACKTEST_FINAL.md  COMPREHENSIVE_CHECK.md  DELIVERY_SUMMARY_V2.md  DEPLOYMENT.md  DOUBLE_BREAKTHROUGH.md  DRY_RUN_CLARIFICATION.md  DYNAMIC_EXIT_COMPLETE_RECORD.md  DYNAMIC_EXIT_FAILURE_ANALYSIS.md  DYNAMIC_EXIT_FINAL_SUMMARY.md  DYNAMIC_EXIT_FINAL_TEST.md  DYNAMIC_EXIT_IMPLEMENTATION_STATUS.md  DYNAMIC_EXIT_KEY_FINDINGS.md  DYNAMIC_EXIT_SESSION_SUMMARY.md  DYNAMIC_EXIT_SOLUTION.md  FINAL_ANALYSIS_REPORT.md  FINAL_EXPLORATION_SUMMARY.md  FINAL_ROOT_CAUSE.md  FINAL_STATUS.md  ICT-Documentation-Completion-Report.md  ICT_COMPONENTS_COMPLETE_TEST.md  ICT_RESEARCH_COMPLETE_SESSION_SUMMARY.md  ICT_STRATEGY_COMPREHENSIVE_ANALYSIS.md  KILLZONE_BREAKTHROUGH.md  KILLZONE_TEST.md  KILL_ZONE_ANSWER.md  KILL_ZONE_OPTIMAL_STRATEGY.md  LIQUIDITY_SWEEP_BACKTEST_RESULTS.md  LIVE_TRADING_CONFIRMED.md  MINIMAL_TREND_FILTER_STATUS.md  (+26 more)
cli/: utils.py
examples/: ibkr_paper_order_intent.example.json
pine_scripts/: PINE_SCRIPT_V2_GUIDE.md  lightglow_optimized_strategy.pine  lightglow_paper_executable_validation.pine  lightglow_pd_combined_1min.pine  lightglow_premium_discount_adaptive_1m.pine  lightglow_premium_discount_reversal_1m.pine  (+7 more)
tests/: conftest.py  (+48 more)
(+475 files in other folders)
